syntax = "proto3";

option csharp_namespace = "DiscountSystem.API";

package discount;

service Discount {
  rpc GenerateCodes(GenerateRequest) returns (GenerateResponse);
  rpc UseCode(UseCodeRequest) returns (UseCodeResponse);
}

message GenerateRequest {
  uint32 count = 1;
}

message GenerateResponse {
  bool result = 1;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeResponse {
  uint32 result = 1; // 0 = success, 1 = failure
}